# nhl-mcp-python

./: README.md  pyproject.toml
src/nhl_mcp/: __init__.py  __main__.py  nhl_api.py  server.py
