[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nhl-mcp-server"
version = "1.0.0"
description = "MCP server for NHL live data and statistics with natural language queries"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "nhl", "hockey", "statistics", "live-data"]
authors = [
    {name = "NHL MCP Server"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.scripts]
nhl-mcp-server = "nhl_mcp.server:main"

[project.urls]
Homepage = "https://github.com/yourusername/nhl-mcp-server"
Issues = "https://github.com/yourusername/nhl-mcp-server/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nhl_mcp = ["py.typed"]
